[package]
name = "reels"
version = "0.1.1"
authors = ["Joan R. <jrbellido@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
ring = "0.16.20"
data-encoding = "2.3.2"
clap = "2.33.3"
log = "0.4.14"
env_logger = "0.8.3"
regex = "1.4.5"
sqlite = "0.26.0"
chrono = "0.4.19"
camino = "1.0.4"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.14", features = ["thread-pool"]}
rand = "0.8.3"
humansize = "1.1.0"
fuser = "0.7"
ctrlc = { version = "3.0", features = ["termination"] }
